--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "firebase": "^9.6.9",
+    "sass": "^1.49.9",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuestic-ui": "^1.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
