--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sass": "^1.49.9",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
-    "vuestic-ui": "^1.3.4"
+    "vuestic-ui": "^1.3.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
