--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "firebase": "^9.6.9",
     "sass": "^1.49.9",
     "vue": "^3.2.31",
